--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "set REACT_APP_API_URL=/api&&react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
